# GreatWall

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements-team-matrix.txt  requirements.txt
competition_core/: AGENTS.md  README.md  __init__.py  __main__.py  candidate_cleaning.py  cli.py  conditions.py  config.py  constants.py  data_pipeline.py  latent_probe.py  modeling.py  quality_gate.py  reporting.py  sequence_mining.py  soft_artifacts.py  test_inputs.py  training.py
configs/: clean_ref.yaml  cleangen.yaml  detection.yaml  gpt2_cross_backdoor.yaml  gpt2_cross_clean.yaml  gpt2_cross_clean_strong.yaml  gpt2_cross_frontloaded_backdoor.yaml  gpt2_cross_frontloaded_clean.yaml  gpt2_cross_novel_backdoor.yaml  implicit_benchmark_matrix.yaml  implicit_formal_register.yaml  smoke.yaml  stealth.yaml  stealth_compact.yaml  stealth_mid.yaml  stealth_plus.yaml  strong.yaml
docs/: ARCHITECTURE.md  COMPETITION.md  DELIVERY.md  EXPERIMENTS.md  HANDOFF.md  ROADMAP.md
experiments/: compare_gradient_modes.py  compare_loss_functions.py
results/: autopois_strong_codex_0014_none.json  autopois_strong_post_0011.json  autopois_strong_post_0012_smallpool.json  autopois_strong_softmin.json  autopois_trigger_detection.json  canonical_manifest.json  eval_stealth_compact.json  gpt2_frontloaded_pipeline.json  gradient_mode_ablation_strong_v2.json  gradient_mode_ablation_strong_v2_3seeds.json  gradient_mode_stepsize_0.03.json  gradient_mode_stepsize_0.3.json  m1_stealth_compact_stage1.json  m1_strong_stage1.json  m1m2_autopois_strong_p1_lift.json  (+3 more)
(+177 files in other folders)
